# Arkhe

./: .gitignore  CMakeLists.txt  CMakePresets.json  INTEGRACION.md  README.md  app.hpp  arkhe-bridge-old.js  arkhe_bridge.json  diffs_integracion.cpp  main.cpp  platform_win_icon.cpp  resources.rc  resources.rc.in
.agent/scripts/: send_arkhe.js
.agent/workflows/: send-to-arkhe.md
assets/: crossref.json  deps.json  msc2020_tree.json
assets/entries/: 15A04.tex  20M30.tex  37C10.tex  54E35.tex  Cap_1.tex  entries_index.json
assets/entries/.eq_cache/2fcc6a5c123cd866/: eq.tex
assets/entries/.eq_cache/e02c72a6576bdf0a/: eq.tex
assets/entries/.eq_cache/e03010a6576f215b/: eq.tex
assets/entries/.eq_cache/e59910a61875c045/: eq.tex
assets/graphics/: ui_skin.json
backup2/: CMakeLists.txt  bubble_controls.cpp  bubble_controls.hpp  dep_graph.cpp  dep_graph.hpp  dep_view.cpp  dep_view.hpp
backup3/: mathlib_gen.cpp
backup4/: CMakeLists.txt  dep_view.cpp  main.cpp
data/: crossref_loader.cpp  dep_graph.cpp  dep_graph.hpp  math_node.hpp  mathlib_gen.cpp  mathlib_gen.hpp  mathlib_loader.cpp  mathlib_loader.hpp  nav_state.cpp  nav_state.hpp  position_state.hpp  terminal_input.cpp  vscode_bridge.cpp  vscode_bridge.hpp
data/connect/: terminal_input.cpp  terminal_input.hpp  vscode_bridge.cpp
data/editor/: body_parser.cpp  body_parser.hpp  edit_state.hpp  editor_io.cpp  editor_io.hpp  equation_cache.cpp  equation_cache.hpp  section_data.hpp
data/loaders/: crossref_loader.cpp  crossref_loader.hpp  dep_graph.cpp  mathlib_loader.cpp  mathlib_loader.hpp  msc_loader.cpp  msc_loader.hpp
data/search/: loogle.cpp  search_utils.cpp  search_utils.hpp
data/state/: nav_state.hpp  position_state.hpp
search/: loogle.cpp  loogle.hpp  search_utils.cpp  search_utils.hpp
tools/: .vscodeignore  LICENSE  README.md  arkhe-bridge-0.1.0-final.vsix  arkhe-bridge-0.1.0-fixed.vsix  arkhe-bridge-0.1.0-new.vsix  arkhe-bridge-0.1.0.vsix  arkhe-bridge-diag.vsix  arkhe-bridge-diagnostic.vsix  arkhe-bridge-v2.vsix  arkhe-bridge-v3.1.vsix  arkhe-bridge-v3.2.vsix  arkhe-bridge-v3.3.vsix  arkhe-bridge-v3.vsix  bridge_watch.ps1  error.txt  extension.ts  package-lock.json  package.json  tsconfig.json
ui/: app.hpp  bubble_stats.cpp  bubble_view.cpp  bubble_view.hpp  constants.hpp  dep_view.cpp  dep_view.hpp  docs_panel.cpp  docs_panel.hpp  entry_editor.cpp  entry_editor.hpp  font_manager.cpp  font_manager.hpp  font_panel.cpp  font_panel.hpp  info_crossrefs.cpp  info_description.cpp  info_header.cpp  info_panel.cpp  info_panel.hpp  info_resources.cpp  nine_patch.cpp  panel_widget.cpp  panel_widget.hpp  search_panel.cpp  texture_cache.hpp  toolbar.cpp  toolbar.hpp  ubicaciones_panel.cpp  ubicaciones_panel.hpp
ui/aesthetic/: font_manager.cpp  nine_patch.cpp  nine_patch.hpp  overlay.hpp  skin.cpp  skin.hpp  theme.cpp
ui/bubble/: bubble_controls.cpp  bubble_controls.hpp  bubble_draw.cpp  bubble_draw.hpp  bubble_label.cpp  bubble_label.hpp  bubble_layout.cpp  bubble_layout.hpp  bubble_stats.cpp  bubble_stats.hpp
ui/controls/: canvas_btn.cpp  canvas_btn.hpp  canvas_buttons.cpp  canvas_buttons.hpp  ext_buttons.cpp  ext_buttons.hpp  mode_switcher.cpp  mode_switcher.hpp  nav_sync.cpp  nav_sync.hpp  zoom_controls.cpp  zoom_controls.hpp
ui/core/: font_manager.hpp  skin.cpp  skin.hpp  theme.cpp  theme.hpp
ui/dep/: dep_draw.cpp  dep_draw.hpp  dep_sim.cpp  dep_sim.hpp
ui/editor/: body_parser.cpp  edit_state.hpp  editor_io.cpp  editor_io.hpp  editor_sections.cpp  editor_sections.hpp  equation_cache.cpp  equation_cache.hpp
ui/info/: info_crossrefs.cpp  info_crossrefs.hpp  info_description.cpp  info_description.hpp  info_header.cpp  info_header.hpp  info_panel.cpp  info_panel.hpp  info_resources.cpp  info_resources.hpp  info_text_select.cpp  info_text_select.hpp
ui/key_controls/: kbnav_info.cpp  kbnav_info.hpp  kbnav_search.cpp  kbnav_search.hpp  keyboard_nav.cpp  keyboard_nav.hpp
ui/key_controls/kbnav_info/: kbnav_info.cpp  kbnav_info.hpp
ui/key_controls/kbnav_search/: kbnav_search.cpp  kbnav_search.hpp
ui/key_controls/kbnav_toolbar/: kbnav_toolbar.cpp  kbnav_toolbar.hpp
ui/key_controls/kbnav_views/: kbnav_views.cpp  kbnav_views.hpp
ui/panels/: config_panel.cpp  config_panel.hpp  docs_panel.cpp  docs_panel.hpp  entry_editor.cpp  entry_editor.hpp  search_panel.cpp  search_panel.hpp  toolbar.cpp  toolbar.hpp  ubicaciones_panel.cpp  ubicaciones_panel.hpp
ui/search_panel/: local_search_list.cpp  local_search_list.hpp  loogle_list.cpp  loogle_list.hpp  search_layout.hpp  search_panel.cpp  search_panel.hpp  search_widgets.cpp  search_widgets.hpp
ui/toolbar/: config_panel.cpp  config_panel.hpp  docs_panel.cpp  docs_panel.hpp  entry_editor.cpp  entry_editor.hpp  toolbar.cpp  toolbar.hpp  ubicaciones_panel.cpp  ubicaciones_panel.hpp
ui/toolbar/docs_panel/: docs_draw_helpers.cpp  docs_page.hpp  docs_page_architecture.cpp  docs_page_data_formats.cpp  docs_page_entry_editor.cpp  docs_page_navigation.cpp  docs_page_overview.cpp  docs_page_search.cpp  docs_page_ubicaciones.cpp
ui/toolbar/editor_panel/: editor_body.cpp  editor_body_keyboard.cpp  editor_body_preview.cpp  editor_body_render.cpp  editor_body_section.cpp  editor_cross_refs.cpp  editor_file_manager.cpp  editor_header_fields.cpp  editor_resources.cpp  editor_sections.cpp  editor_sections.hpp  editor_sections_internal.hpp
ui/views/: bubble_view.cpp  bubble_view.hpp  dep_view.cpp  dep_view.hpp
ui/views/bubble/: bubble_controls.hpp  bubble_draw.cpp  bubble_draw.hpp  bubble_label.cpp  bubble_label.hpp  bubble_layout.cpp  bubble_layout.hpp  bubble_stats.cpp  bubble_stats.hpp
ui/views/controls/: canvas_btn.cpp  canvas_btn.hpp  canvas_buttons.cpp  canvas_buttons.hpp  ext_buttons.cpp  ext_buttons.hpp  mode_switcher.cpp  mode_switcher.hpp  nav_sync.cpp  nav_sync.hpp  zoom_controls.cpp
ui/views/dep/: dep_camera.cpp  dep_camera.hpp  dep_draw.cpp  dep_draw.hpp  dep_hud.cpp  dep_hud.hpp  dep_input.cpp  dep_input.hpp  dep_pivot.cpp  dep_pivot.hpp  dep_scene.cpp  dep_scene.hpp  dep_sim.cpp  dep_sim.hpp
ui/widgets/: panel_widget.cpp  panel_widget.hpp
